[gd_scene load_steps=2 format=3 uid="uid://bqiqry22he1iq"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_odgds"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = 7.0
offset_right = 484.0
offset_bottom = 721.0
script = ExtResource("1_odgds")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_right = 67.5
grow_horizontal = 2
grow_vertical = 2

[node name="CoinChaseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Coin Chase!"

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
